<resources>
    <string name="app_name">Climate Change</string>
    <string name="definition_main_title">Definition</string>
    <string name="main_image_description">Main Image Description</string>
    <string name="definition_image_description">definitionImageView description</string>
    <string name="causes_image_description">causesImageView description</string>
    <string name="effects_image_description">effectsImageView description</string>
    <string name="solution_image_description">solutionImageView description</string>
    <string name="definition_title">Definition of Climate Change</string>
    <string name="definition_text">The climate change phenomenon refers to seasonal changes over a long period with respect to the growing accumulation of greenhouse gases in the atmosphere. Tackling this phenomenon is of utmost importance given the pivotal role that climate plays in the formation of natural ecosystems and the human economies and civilizations on which they are based. Recent studies have shown that human activities since the beginning of the industrial revolution – manifested in fossil fuel consumption for power generation, land deforestation for agriculture, and urban expansion – have contributed to an increase in the concentration of carbon dioxide in the atmosphere by as much as 40%, from about 280 parts per million in the pre-industrial period, to 402 parts per million in 2016, which in turn has led to global warming. Indeed, the Intergovernmental Panel on Climate Change has described anthropogenic climate change as “inevitable” in view of the numerous changes observed in the temperature of the atmosphere, oceans, and sea ice, in addition to some extensive changes in the climate cycle over the course of the 20th century. Several parts of the world have already experienced the warming of coastal waters, high temperatures, a marked change in rainfall patterns, and an increased intensity and frequency of storms. Rising sea levels and temperatures are expected to be an increasing trend. Moreover, the potential for severe and irreversible climate and environmental changes, including the continued melting of polar ice layers, such as those found in Greenland and West Antarctica, could cause sea level rises exceeding 10 meters, harmful fluctuations in ocean currents, and increased methane emissions. The probability that most global warming of the last 15 years is the result of human actions is estimated to be more than 90%. The failure to address climate change will inevitably undermine both the world’s economic and social stability. The Intergovernmental Panel on Climate Change has issued an urgent call to bring about a marked reduction in global greenhouse gas emissions and for adaption measures to respond to the effects of anthropogenic climate change.</string>
    <string name="causes_title">Causes of Climate Change</string>
    <string name="causes_text">On the broadest scale, the rate at which energy is received from the Sun and the rate at which it is lost to space determine the equilibrium temperature and climate of Earth. This energy is distributed around the globe by winds, ocean currents, and other mechanisms to affect the climates of different regions.</string>
    <string name="humans_title">Influence of humans</string>
    <string name="humans_text">Humans have been influencing the climate since the start of the Industrial Revolution. Since then, the average world temperature has risen by approximately 0.8 degrees Celsius. In North-West Europe (including the Netherlands) the average temperature has risen by 1.5 degrees. The sea level has risen by around twenty centimetres and most of the glaciers have shrunk dramatically. Up to 1950 the influence of nature was more important than human influence. After that, the pattern in the average world temperature can only be explained by factoring in the human influence. Even so, a slight decline in temperature did appear from the mid-1940s to the mid-1970s. It was linked to a dramatic increase in cooling aerosols from the post-war industrialisation in the western world. It was also caused by a mild decline in solar activity and some major volcanic eruptions in the second half of this period. According to the latest IPCC report, it is more than likely (more than 90 per cent probability) that most of the global warming in recent decades is attributable to the observed increase in greenhouse gases</string>
    <string name="co2_title">CO2</string>
    <string name="co2_text">The most well-known and the most important greenhouse gas is CO2. The concentration of CO2 in the atmosphere is subject to variation even without human intervention. The carbon cycle causes an exchange of CO2 between the biosphere and the oceans on the one hand and the atmosphere on the other. Vast amounts of CO2 are also released by the burning of fossil fuels. There is incontrovertible evidence that the CO2 concentration in the air has never been so high in 800,000 years (probably even 60 million years) as it is now. The trend suggests that CO2 emissions will continue to rise globally, although the economic crisis did prevent a rise in 2009. The Netherlands (per head of population) is high on the list of CO2 emitters in the world. Besides CO2 , methane (CH4), nitrous oxide (N2O), fluorinated gases, ozone (O3) and water vapour are important greenhouse gases. Water vapour plays a unique role as it strengthens the heat-trapping effect caused by other greenhouse gas emissions. This is because a warmer atmosphere retains more water. The amount of water vapour cannot be artificially increased or decreased.</string>
    <string name="aerosols_title">Aerosols</string>
    <string name="aerosols_text">Aerosols are less well-known than greenhouse gases. Aerosols are dust particles which, in addition to CO2, are released into the atmosphere in large quantities when wood and fossil fuels are burned. Some aerosols have a cooling effect on the climate, others have a warming effect. On balance they have a cooling rather than a warming effect, but no-one can give a clear idea of the magnitude, because we still do not understand how aerosols influence the occurrence and characteristics of clouds.</string>
    <string name="uncertainty_title">Uncertainty</string>
    <string name="uncertainty_text">The extent of global warming in the future is swathed in uncertainty; first, because we have no idea of how much of an increase to expect in greenhouse gases (depending on economic growth), and secondly, because we do not know exactly how our climate system will respond (climate sensitivity).</string>
    <string name="effects_title">Effects of Climate Change</string>
    <string name="polar_title">Glaciers and polar ice are melting</string>
    <string name="polar_text">As the climate warms, glaciers are melting. Yet millions of people depend on the planet\'s 190,000 glaciers to supply water in dry seasons. Arctic sea ice is melting rapidly, a process that further speeds up climate change. On the West Antarctic Peninsula, massive ice shelves have crumbled into the ocean.</string>
    <string name="sea_title">Sea levels are rising, faster</string>
    <string name="sea_text">As glaciers and land-based ice sheets melt, they contribute to sea level rise. This increases flood risk for millions of people on coasts, where populations and cities are growing fast. Sea levels could rise by a meter by the end of this century if we don\'t reign in emissions. For people of small islands and low-lying coastal areas, sea level rise is already a harsh reality.</string>
    <string name="extreme_title">Ramped up droughts, floods and other extreme weather</string>
    <string name="extreme_text">More extreme droughts, tropical cyclones, forest fires, and intense rainfall are projected for our warming climate. Many types of extreme weather are already getting worse. Each day we delay action means more damage to lives, economies and ecosystems.</string>
    <string name="system_title">Climate change ecosystem and extinction threats</string>
    <string name="system_text">From tropical mountain cloud forests to polar pack ice, we must protect the ecosystems that enrich our lives with beauty and adventure. But climate change is already causing widespread harm to polar life, coral reefs and other unique and vulnerable ecosystems. Extinctions will ramp up unless we act.</string>
    <string name="air_title">Air pollution</string>
    <string name="air_text">Air pollution — already a silent and serious killer — is set to become worse still under climate change. Yet we can fight both air pollution and climate change with the shift to 100 percent renewable energy, a hugely important double win for the health of people and our planet.</string>
    <string name="solutions_title">Solutions for Climate Change</string>
    <string name="step_one_title">Step 1: Save Energy — and money!</string>
    <string name="step_one_text">Switch off and unplug appliances when not in use. TVs, DVD players and computers use electricity even on standby, so remember to unplug them, and cell phone chargers too. Switching off and monitoring is becoming even easier with home automation systems. New apps and devices, increasingly enabled by the Internet, are making it cheaper and simpler to have a smarthome. Use energy efficient lighting. LEDs (light emitting diodes), CFLs (compact fluorescent lamps) and halogen incandescents use up to 80 percent less energy and last as much as 25 times longer than traditional incandescent light bulbs. LEDs are the better (more efficient) option, but if you use CFLs be sure to dispose of them properly at the end of their life or if they break, because they contain small amounts of mercury. Buy energy efficient appliances. Before buying, check how much power new appliances, furnaces, and water heaters will use. Remember, cheaper up-front purchases could cost more in electricity bills over time. To help you make energy-smart purchases, some countries have labelling and rating systems to let you compare the energy use of different products. Insulate, install efficient windows and doors, and plug leaks. Proper insulation and air sealing dramatically cut energy used to heat and cool homes. Double and triple-paned windows and energy-efficient doors save even more. Check for programs, rebates, incentives or tax credits that help you make these important changes and improve your comfort and quality of life! Install programmable thermostats. These devices bring easy energy savings by automatically adjusting your home’s temperature via a program you set. Worry no more about wasting energy while you’re at work or asleep! Some devices even learn your behaviour and adjust temperatures automatically.</string>
    <string name="step_two_title">Step 2: Power up your life with renewable energy</string>
    <string name="step_two_text">Go solar. Use photovoltaics (PV) and solar thermal systems to power your home and heat water. Dramatic cost declines make solar more and more affordable. Add a system to your own sunny rooftop, join a community-shared solar project, or buy solar power from a neighbour. Feeling ambitious? Consider buying into a larger renewable energy project through a local energy cooperative. Install a renewable heating and cooling system. The many cost-effective ways to renewably heat or cool your home include air source heat pumps, pellet stoves, ground source heat pumps and geothermal technologies. Check for programs, subsidies, incentives or tax credits to lower your upfront costs. Switch to green electricity. In your area you may have the option to choose your electricity supplier and buy renewable electricity directly from a power company. For the greatest environmental benefits, choose suppliers that provide electricity from new, local renewable energy projects.</string>
</resources>